--- a/envs/django.env
+++ b/envs/django.env
@@ -1,6 +1,8 @@
-DEBUG=True
 POSTGRES_DB_HOST=database
 POSTGRES_DB_PORT=5432
-SUPER_USER_EMAIL=emmanuelt2009@gmail.com
-SUPER_USERNAME=emmanuel
-SUPER_PASSWORD=yBfrk&!ivCicZ2gIFWlvzfW2
+SUPER_USER_EMAIL=<SUPER_USER_EMAIL>
+SUPER_USERNAME=<SUPER_USERNAME>
+SUPER_PASSWORD=<SUPER_PASSWORD>
+FRONT_END_PORT=<FRONT_END_PORT>
+RABBITMQ_HOST=<RABBITMQ_HOST>
+DJANGO_SECRET_KEY=<DJANGO_SECRET_KEY>
