--- a/envs/db.env
+++ b/envs/db.env
@@ -1,3 +1,3 @@
-POSTGRES_DB=apitrader
-POSTGRES_PASSWORD=IUm^MCe8n8V%gCGI0oNC473!pq45KFp*!s8cvh#n
-POSTGRES_USER=happyfam
+POSTGRES_DB=<POSTGRES_DB>
+POSTGRES_PASSWORD=<POSTGRES_PASSWORD>
+POSTGRES_USER=<POSTGRES_USER>
