--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 celery==5.3.1
 Django==4.2.4
+django-celery-beat==2.5.0
 django-extensions==3.2.3
 django-import-export==3.2.0
 django-waffle==4.0.0
